--- a/css/styles.css
+++ b/css/styles.css
@@ -1,230 +1,177 @@
 :root {
-    --main-text-color:#40514E;
-    --navbar-bg-color:#edf1f4;
-    --navbar-li-hover:#ff4321;
+  --main-text-color: #40514e;
+  --navbar-bg-color: #edf1f4;
+  --navbar-li-hover: #ff4321;
 }
 
-
 body {
-    font-family: 'Roboto', sans-serif;
-    color: var(--main-text-color); 
-    margin:0;
-    background: radial-gradient(circle at 18.7% 37.8%, rgb(250, 250, 250) 0%, rgb(225, 234, 238) 90%);
+  font-family: "Roboto", sans-serif;
+  color: var(--main-text-color);
+  margin: 0;
+  background: radial-gradient(
+    circle at 18.7% 37.8%,
+    rgb(250, 250, 250) 0%,
+    rgb(225, 234, 238) 90%
+  );
 }
 
 .navbar {
-    display:flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    list-style-type: none;
-    background-color: var(--navbar-bg-color);
-    padding:10px 10vw;
-    margin:0;
-    box-shadow:2px 9px 49px -17px rgba(0,0,0,0.3);
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  list-style-type: none;
+  background-color: var(--navbar-bg-color);
+  padding: 10px 10vw;
+  margin: 0;
+  box-shadow: 2px 9px 49px -17px rgba(0, 0, 0, 0.3);
 }
 
 .navbar-item a {
-    text-decoration: none;
-    color: var(--main-text-color);
-    font-size: 25px;
-    font-weight: 700;
+  text-decoration: none;
+  color: var(--main-text-color);
+  font-size: 25px;
+  font-weight: 700;
 }
-
 
 .navbar-item {
-    cursor: pointer;
+  cursor: pointer;
 }
-
 
 .navbar-item:hover {
-    background-color: #e1dcdc;
+  background-color: #e1dcdc;
 }
 
-
-.auth-form input {
-    border: 0;
-    border-bottom: 2px solid #9b9b9b;
-    color: var(--main-text-color);
-    background: transparent;
-    outline: 0;
-    font-size: 20px;
-    cursor: text;
-    transition: border-color 0.2s;
-    margin:2%;
+#search-bar:focus,
+.auth-form input:hover {
+  border-color: #27ae60;
 }
-
-#search-bar:focus, .auth-form input:hover {
-    border-color: #27ae60;
-}
-
 
 #search-bar {
-    border: 2px solid #9b9b9b;
-    border-radius: 10px;
-    color: var(--main-text-color);
-    background: transparent;
-    outline: 0;
-    font-size: 20px;
-    cursor: text;
-    transition: border-color 0.2s;
+  border: 2px solid #9b9b9b;
+  border-radius: 10px;
+  color: var(--main-text-color);
+  background: transparent;
+  outline: 0;
+  font-size: 20px;
+  cursor: text;
+  transition: border-color 0.2s;
 }
 
 .wrapper-search {
-    position: relative;
+  position: relative;
 }
 
 #search-button {
-    position: absolute;
-    top:0;
-    right:0;
-    color: #fff;
-    border: 2px solid #9b9b9b;
-    border-radius: 10px;
-    cursor: pointer;
-    height: 30px;
-    outline: none;
-    padding: 0 25px;
-    background: #0b6bb6;
-    border-color: #0b6bb6;
-    transition: background-color 0.5s, border-color 0.5s;
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: #fff;
+  border: 2px solid #9b9b9b;
+  border-radius: 10px;
+  cursor: pointer;
+  height: 30px;
+  outline: none;
+  padding: 0 25px;
+  background: #0b6bb6;
+  border-color: #0b6bb6;
+  transition: background-color 0.5s, border-color 0.5s;
 }
 
 #search-button:hover {
-    background-color: #064474;
-    border-color:#064474;
+  background-color: #064474;
+  border-color: #064474;
 }
 
 .items {
-    display:flex;
-    flex-wrap: wrap;
-    margin:5px;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 5px;
 }
 
 .item-container {
-    width:auto;
-    border: 1px solid rgb(205, 200, 200);
-    color:var(--main-text-color);
-    padding:15px;
-    width:350px;
-    margin:5px;
-    box-shadow:2px 9px 25px -17px rgba(0,0,0,0.3);
+  width: auto;
+  border: 1px solid rgb(205, 200, 200);
+  color: var(--main-text-color);
+  padding: 15px;
+  width: 350px;
+  margin: 5px;
+  box-shadow: 2px 9px 25px -17px rgba(0, 0, 0, 0.3);
 }
 
 .item-container img {
-    width: 50%;
+  width: 50%;
 }
 
-.item-container button, .clear-cart-btn, .checkout-btn {
-    cursor:pointer;
-    border:none;
-    text-transform: uppercase;
-    padding:10px;
-    color:white;
-    font-weight: 500;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+.item-container button,
+.clear-cart-btn,
+.checkout-btn {
+  cursor: pointer;
+  border: none;
+  text-transform: uppercase;
+  padding: 10px;
+  color: white;
+  font-weight: 500;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.see-more-btn, .clear-cart-btn {
-    background-color:  #3498db;
-}
-
-.see-more-btn:hover, .clear-cart-btn:hover {
-    background-color: #2980b9;
-}
-
-.add-cart-btn, .checkout-btn {
-    background-color: #2ecc71;
-}
-
-.add-cart-btn:hover, .checkout-btn:hover {
-    background-color: #27ae60;
-}
-
-.auth-form {
-    display: flex;
-    flex-direction: column;
-    margin:25px;
-    border:1px solid #f96d00;
-    padding:5%;
-    width:35%;
-}
-
-
-.auth-form button {
-    width:35%;
-    background-color: #2ecc71;
-}
-
-.auth-form-container {
-    display:flex;
-    flex-wrap: wrap;
-}
-
-#add-btn, .auth-form button {
-    cursor:pointer;
-    border:none;
-    text-transform: uppercase;
-    padding:10px;
-    color:white;
-    font-weight: 500;
-    text-decoration: dashed;
+#add-btn {
+  cursor: pointer;
+  border: none;
+  text-transform: uppercase;
+  padding: 10px;
+  color: white;
+  font-weight: 500;
+  text-decoration: dashed;
 }
 
 .item-wrapper {
-    display:flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
-.item-form input, .item-form textarea {
-    display:flex;
-    flex-direction: column;
-    margin:10px;
-    padding:10px;
+.item-form input,
+.item-form textarea {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+  padding: 10px;
 }
 
 #cart-main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width:100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
-
 
 .cart-container {
-    display:flex;
-    flex-wrap:wrap;
-    justify-content: space-between;
-    border: 1px solid rgb(205, 200, 200);
-    color:var(--main-text-color);
-    font-size: 0.8em;
-    padding:1em;
-    margin:0.5em;
-    width:30%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  border: 1px solid rgb(205, 200, 200);
+  color: var(--main-text-color);
+  font-size: 0.8em;
+  padding: 1em;
+  margin: 0.5em;
+  width: 30%;
 }
 
-
 .cart-container img {
-    width: 95px;
-    height:95px;
+  width: 95px;
+  height: 95px;
 }
 
 .cart-container button {
-    cursor:pointer;
-    border:none;
-    text-transform: uppercase;
-    border:none;
-    background:none;
-    color:var(--main-text-color);
-    font-weight: 500;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  cursor: pointer;
+  border: none;
+  text-transform: uppercase;
+  border: none;
+  background: none;
+  color: var(--main-text-color);
+  font-weight: 500;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .clear-cart {
-    width:100%;
+  width: 100%;
 }
-
-
-
-
-
-
