--- a/css/styles.css
+++ b/css/styles.css
@@ -8,78 +8,6 @@ body {
   font-family: "Roboto", sans-serif;
   color: var(--main-text-color);
   margin: 0;
-  background: radial-gradient(
-    circle at 18.7% 37.8%,
-    rgb(250, 250, 250) 0%,
-    rgb(225, 234, 238) 90%
-  );
-}
-
-.navbar {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  list-style-type: none;
-  background-color: var(--navbar-bg-color);
-  padding: 10px 10vw;
-  margin: 0;
-  box-shadow: 2px 9px 49px -17px rgba(0, 0, 0, 0.3);
-}
-
-.navbar-item a {
-  text-decoration: none;
-  color: var(--main-text-color);
-  font-size: 25px;
-  font-weight: 700;
-}
-
-.navbar-item {
-  cursor: pointer;
-}
-
-.navbar-item:hover {
-  background-color: #e1dcdc;
-}
-
-#search-bar:focus,
-.auth-form input:hover {
-  border-color: #27ae60;
-}
-
-#search-bar {
-  border: 2px solid #9b9b9b;
-  border-radius: 10px;
-  color: var(--main-text-color);
-  background: transparent;
-  outline: 0;
-  font-size: 20px;
-  cursor: text;
-  transition: border-color 0.2s;
-}
-
-.wrapper-search {
-  position: relative;
-}
-
-#search-button {
-  position: absolute;
-  top: 0;
-  right: 0;
-  color: #fff;
-  border: 2px solid #9b9b9b;
-  border-radius: 10px;
-  cursor: pointer;
-  height: 30px;
-  outline: none;
-  padding: 0 25px;
-  background: #0b6bb6;
-  border-color: #0b6bb6;
-  transition: background-color 0.5s, border-color 0.5s;
-}
-
-#search-button:hover {
-  background-color: #064474;
-  border-color: #064474;
 }
 
 .items {
@@ -88,7 +16,9 @@ body {
   margin: 5px;
 }
 
-.item-container {
+.item-container,
+.clear-cart-btn,
+.checkout-btn {
   width: auto;
   border: 1px solid rgb(205, 200, 200);
   color: var(--main-text-color);
@@ -96,6 +26,26 @@ body {
   width: 350px;
   margin: 5px;
   box-shadow: 2px 9px 25px -17px rgba(0, 0, 0, 0.3);
+}
+
+.see-more-btn,
+.clear-cart-btn {
+  background-color: #3498db;
+}
+
+.see-more-btn:hover,
+.clear-cart-btn:hover {
+  background-color: #2980b9;
+}
+
+.add-cart-btn,
+.checkout-btn {
+  background-color: #2ecc71;
+}
+
+.add-cart-btn:hover,
+.checkout-btn:hover {
+  background-color: #27ae60;
 }
 
 .item-container img {
@@ -112,16 +62,6 @@ body {
   color: white;
   font-weight: 500;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-}
-
-#add-btn {
-  cursor: pointer;
-  border: none;
-  text-transform: uppercase;
-  padding: 10px;
-  color: white;
-  font-weight: 500;
-  text-decoration: dashed;
 }
 
 .item-wrapper {
